[tool.poetry]
name = "garn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
django-extensions = "^3.2.1"
ipython = "^8.8.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
